--- a/notebooks/dictionary_learning.ipynb
+++ b/notebooks/dictionary_learning.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary Learning\n",
+    "Greatly inspired by this [sklearn example](https://scikit-learn.org/stable/auto_examples/decomposition/plot_faces_decomposition.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
