Model embedding visualization notebook

--- a/notebooks/dictionary_learning.ipynb
+++ b/notebooks/dictionary_learning.ipynb
@@ -10,18 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
+    "import pickle as pkl\n",
     "from skimage import color\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import decomposition\n",
     "\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from src.features.serialization import load_features"
+    "from src.features.serialization import load_features\n"
    ]
   },
   {
@@ -34,25 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "7a2e3274-9aa4-4651-8979-c68a0fde5e67",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 40000)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = load_features()\n",
     "\n",
-    "imgs = np.stack(df[\"image\"][:1000]) # <- currently limiting data arbitrarily because full data takes up 22GB as 64-bit floats\n",
+    "imgs = np.stack(df[\"image\"]) # <- currently limiting data arbitrarily because full data takes up 22GB as 64-bit floats\n",
     "imgs = imgs / 255\n",
     "faces = color.rgb2gray(imgs)\n",
     "image_shape = faces.shape[1:]\n",
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +82,15 @@
     "        plt.xticks(())\n",
     "        plt.yticks(())\n",
     "    plt.subplots_adjust(0.01, 0.05, 0.99, 0.93, 0.04, 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = "
    ]
   },
   {
